test/corpus/L1/positive/array-byte.st
"---
id: array-byte
kind: positive
phase: parse
layer: L1
spec: anexoA:array.byte
origin: spec-ANSI
section: array.byte
note: byte array with values including the boundary 255
---"
#[1 2 255]
