test/corpus/L1/negative/unclosed-block.st
"---
id: unclosed-block
kind: negative
phase: parse
layer: L1
spec: anexoA:error.unclosed-block
origin: spec-ANSI
section: error.unclosed-block
codes: E_UNCLOSED_BLOCK
---"
[ 1 + 2
